--- a/layouts/_default/onepagestyle.html
+++ b/layouts/_default/onepagestyle.html
@@ -1,4 +1,4 @@
 <article id="{{ .File.TranslationBaseName }}">
-  <h1>{{ .Title }}</h1>
+  <h2 class="major">{{ .Title }}</h2>
   {{ .Content }}
 </article>
