--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,11 +6,12 @@
 -->
 <html>
 	<head>
-		<title>{{ .Title }}</title>
+		<title>TakuSemba</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="./css/main.css" />
 		<link rel="stylesheet" href="./css/project.css" />
+		<link rel="shortcut icon" href="./favicon.ico">
 		<!--[if lte IE 9]><link rel="stylesheet" href="./css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="./css/noscript.css" /></noscript>
 	</head>
