--- a/public/css/main.css
+++ b/public/css/main.css
@@ -126,7 +126,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 0 2rem 0; }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2.25rem;
   line-height: 1.3;
   letter-spacing: 0.5rem; }
 
@@ -455,6 +455,7 @@ input[type="radio"] + label:before {
     -webkit-pointer-events: none;
     -ms-pointer-events: none;
     pointer-events: none;
+    background-image: url("/images/overlay.png");
     background-color: rgba(19, 21, 25, 0.5);
     border-radius: 4px;
     content: '';
@@ -509,7 +510,7 @@ ol {
 
 ul {
   list-style: disc;
-  margin: 0 0 0.5em 0;
+  margin: 0 0 2rem 0;
   padding-left: 1em; }
   ul li {
     padding-left: 0.5em; }
@@ -770,7 +771,7 @@ button {
     -webkit-transition-delay: 0.75s;
     -ms-transition-delay: 0.75s;
     transition-delay: 0.75s;
-    background-image: linear-gradient(to top, rgba(19, 21, 25, 0), rgba(19, 21, 25, 0));
+    background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("/images/overlay.png");
     background-size: auto, 256px 256px;
     background-position: center, center;
     background-repeat: no-repeat, repeat;
@@ -784,7 +785,7 @@ button {
     -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
     -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
     transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-    background-image: url("../images/background.png");
+    background-image: url("/images/bg.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
