add google ad metatag

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,6 +8,7 @@
 <meta name="keywords" content="{{ .Site.Params.keywords }}"/>
 <meta name="robots" content="noodp"/>
 <meta name="theme-color" content="{{ .Site.Params.themeColor }}"/>
+<meta name="google-adsense-account" content="ca-pub-8467028060448943">
 <link rel="canonical" href="{{ .Permalink }}"/>
 
 {{ block "title" . }}
